// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`logger-basic registers a project and sends normalized project logs > child-span 1`] = `
{
  "context": {
    "caller_filename": "<repo>/e2e/scenarios/logger-basic.ts",
    "caller_functionname": "logger.traced.name",
    "caller_lineno": 26,
  },
  "created": "<timestamp>",
  "id": "<span:1>",
  "input": {
    "step": "child-work",
    "testRunId": "<run:1>",
  },
  "log_id": "g",
  "metadata": {
    "stage": "child",
    "testRunId": "<run:1>",
  },
  "metrics": {
    "end": 0,
    "start": 0,
  },
  "output": {
    "detail": "child completed",
  },
  "project_id": "project:e2e-project-logs",
  "root_span_id": "<span:3>",
  "span_attributes": {
    "exec_counter": 1,
    "name": "child-span",
  },
  "span_id": "<span:2>",
  "span_parents": [
    "<span:3>",
  ],
}
`;

exports[`logger-basic registers a project and sends normalized project logs > logs3-payloads 1`] = `
[
  {
    "api_version": 2,
    "rows": [
      {
        "_is_merge": false,
        "context": {
          "caller_filename": "<repo>/e2e/scenarios/logger-basic.ts",
          "caller_functionname": "main",
          "caller_lineno": 9,
        },
        "created": "<timestamp>",
        "id": "<span:1>",
        "input": {
          "question": "What is 2 + 2?",
          "testRunId": "<run:1>",
        },
        "log_id": "g",
        "metadata": {
          "testRunId": "<run:1>",
        },
        "metrics": {
          "start": 0,
        },
        "project_id": "project:e2e-project-logs",
        "root_span_id": "<span:2>",
        "span_attributes": {
          "exec_counter": 0,
          "name": "root-span",
          "type": "task",
        },
        "span_id": "<span:2>",
      },
    ],
  },
  {
    "api_version": 2,
    "rows": [
      {
        "_is_merge": true,
        "id": "<span:1>",
        "log_id": "g",
        "metadata": {
          "scenario": "logger-basic",
          "stage": "root",
          "testRunId": "<run:1>",
        },
        "metrics": {
          "end": 0,
        },
        "output": {
          "answer": "4",
          "explanation": "basic arithmetic",
        },
        "project_id": "project:e2e-project-logs",
        "root_span_id": "<span:2>",
        "scores": {
          "correct": 1,
        },
        "span_id": "<span:2>",
      },
      {
        "context": {
          "caller_filename": "<repo>/e2e/scenarios/logger-basic.ts",
          "caller_functionname": "logger.traced.name",
          "caller_lineno": 26,
        },
        "created": "<timestamp>",
        "id": "<span:3>",
        "input": {
          "step": "child-work",
          "testRunId": "<run:1>",
        },
        "log_id": "g",
        "metadata": {
          "stage": "child",
          "testRunId": "<run:1>",
        },
        "metrics": {
          "end": 0,
          "start": 0,
        },
        "output": {
          "detail": "child completed",
        },
        "project_id": "project:e2e-project-logs",
        "root_span_id": "<span:2>",
        "span_attributes": {
          "exec_counter": 1,
          "name": "child-span",
        },
        "span_id": "<span:4>",
        "span_parents": [
          "<span:2>",
        ],
      },
    ],
  },
]
`;

exports[`logger-basic registers a project and sends normalized project logs > root-span 1`] = `
{
  "context": {
    "caller_filename": "<repo>/e2e/scenarios/logger-basic.ts",
    "caller_functionname": "main",
    "caller_lineno": 9,
  },
  "created": "<timestamp>",
  "id": "<span:1>",
  "input": {
    "question": "What is 2 + 2?",
    "testRunId": "<run:1>",
  },
  "log_id": "g",
  "metadata": {
    "scenario": "logger-basic",
    "stage": "root",
    "testRunId": "<run:1>",
  },
  "metrics": {
    "end": 0,
    "start": 0,
  },
  "output": {
    "answer": "4",
    "explanation": "basic arithmetic",
  },
  "project_id": "project:e2e-project-logs",
  "root_span_id": "<span:2>",
  "scores": {
    "correct": 1,
  },
  "span_attributes": {
    "exec_counter": 0,
    "name": "root-span",
    "type": "task",
  },
  "span_id": "<span:2>",
}
`;
